--- a/AnimaflipApi/.env
+++ b/AnimaflipApi/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_NAME=animaflip
-DB_USER=root
-DB_PASS=
+DB_HOST=192.250.229.82
+DB_NAME=revuehandisport_animaflip
+DB_USER=revuehandisport_animaflip
+DB_PASS=SIE@a$GZSky^XRA9Ag
 JWT_SECRET=qkjbfkqhbflbq
